--- a/AspirationTest/test-output/emailable-report.html
+++ b/AspirationTest/test-output/emailable-report.html
@@ -9,10 +9,14 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="8">Aspiration Test-Suite</th></tr>
-<tr><td><a href="#t0">Page Object Model Project</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">6,541</td><td></td><td></td></tr>
+<tr><td><a href="#t0">Page Object Model Project</a></td><td class="num">5</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">53,780</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Aspiration Test-Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Page Object Model Project &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">com.selenium.aspiration.tests.AspirationTest</td><td><a href="#m0">testGettingStarted</a></td><td rowspan="1">1691785065261</td><td rowspan="1">370</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Aspiration Test-Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Page Object Model Project &#8212; passed</th></tr><tr class="passedeven"><td rowspan="5">com.selenium.aspiration.tests.AspirationTest</td><td><a href="#m0">testGettingStarted</a></td><td rowspan="1">1691785965516</td><td rowspan="1">690</td></tr><tr class="passedeven"><td><a href="#m1">testIsOptionsChecked</a></td><td rowspan="1">1691785972087</td><td rowspan="1">17626</td></tr><tr class="passedeven"><td><a href="#m2">testProductPrices</a></td><td rowspan="1">1691785994669</td><td rowspan="1">1743</td></tr><tr class="passedeven"><td><a href="#m3">testSignIn</a></td><td rowspan="1">1691786001345</td><td rowspan="1">2294</td></tr><tr class="passedeven"><td><a href="#m4">testViewProducts</a></td><td rowspan="1">1691786008521</td><td rowspan="1">2345</td></tr></tbody>
 </table>
 <h2>Page Object Model Project</h2><h3 id="m0">com.selenium.aspiration.tests.AspirationTest#testGettingStarted</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m1">com.selenium.aspiration.tests.AspirationTest#testIsOptionsChecked</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m2">com.selenium.aspiration.tests.AspirationTest#testProductPrices</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m3">com.selenium.aspiration.tests.AspirationTest#testSignIn</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m4">com.selenium.aspiration.tests.AspirationTest#testViewProducts</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
