--- a/AspirationTest/test-output/index.html
+++ b/AspirationTest/test-output/index.html
@@ -92,7 +92,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">1 method,   1 passed</span>
+                    <span class="method-stats">5 methods,   5 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -104,6 +104,26 @@
                       <span>
                         <img src="passed.png" width="3%"/>
                         <a href="#" panel-name="suite-Aspiration_Test_Suite" title="com.selenium.aspiration.tests.AspirationTest" class="method navigator-link" hash-for-method="testGettingStarted">testGettingStarted</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Aspiration_Test_Suite" title="com.selenium.aspiration.tests.AspirationTest" class="method navigator-link" hash-for-method="testIsOptionsChecked">testIsOptionsChecked</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Aspiration_Test_Suite" title="com.selenium.aspiration.tests.AspirationTest" class="method navigator-link" hash-for-method="testProductPrices">testProductPrices</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Aspiration_Test_Suite" title="com.selenium.aspiration.tests.AspirationTest" class="method navigator-link" hash-for-method="testSignIn">testSignIn</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Aspiration_Test_Suite" title="com.selenium.aspiration.tests.AspirationTest" class="method navigator-link" hash-for-method="testViewProducts">testViewProducts</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Aspiration_Test_Suite -->
@@ -129,6 +149,34 @@
                   <a name="testGettingStarted">
                   </a> <!-- testGettingStarted -->
                   <span class="method-name">testGettingStarted</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="testIsOptionsChecked">
+                  </a> <!-- testIsOptionsChecked -->
+                  <span class="method-name">testIsOptionsChecked</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="testProductPrices">
+                  </a> <!-- testProductPrices -->
+                  <span class="method-name">testProductPrices</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="testSignIn">
+                  </a> <!-- testSignIn -->
+                  <span class="method-name">testSignIn</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="testViewProducts">
+                  </a> <!-- testViewProducts -->
+                  <span class="method-name">testViewProducts</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -186,16 +234,32 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(1);
+data.addRows(5);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'testGettingStarted')
+data.setCell(0, 1, 'testIsOptionsChecked')
 data.setCell(0, 2, 'com.selenium.aspiration.tests.AspirationTest')
-data.setCell(0, 3, 370);
+data.setCell(0, 3, 17626);
+data.setCell(1, 0, 1)
+data.setCell(1, 1, 'testViewProducts')
+data.setCell(1, 2, 'com.selenium.aspiration.tests.AspirationTest')
+data.setCell(1, 3, 2345);
+data.setCell(2, 0, 2)
+data.setCell(2, 1, 'testSignIn')
+data.setCell(2, 2, 'com.selenium.aspiration.tests.AspirationTest')
+data.setCell(2, 3, 2294);
+data.setCell(3, 0, 3)
+data.setCell(3, 1, 'testProductPrices')
+data.setCell(3, 2, 'com.selenium.aspiration.tests.AspirationTest')
+data.setCell(3, 3, 1743);
+data.setCell(4, 0, 4)
+data.setCell(4, 1, 'testGettingStarted')
+data.setCell(4, 2, 'com.selenium.aspiration.tests.AspirationTest')
+data.setCell(4, 3, 690);
 window.suiteTableData['Aspiration_Test_Suite']= { tableData: data, tableDiv: 'times-div-Aspiration_Test_Suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 370 ms</span>
+              <span class="suite-total-time">Total running time: 24 seconds</span>
               <div id="times-div-Aspiration_Test_Suite">
               </div> <!-- times-div-Aspiration_Test_Suite -->
             </div> <!-- times-div -->
@@ -210,22 +274,9 @@ return data;
         </div> <!-- panel -->
         <div panel-name="ignored-methods-Aspiration_Test_Suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">4 ignored methods</span>
+            <span class="header-content">0 ignored methods</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
-            <div class="ignored-class-div">
-              <span class="ignored-class-name">com.selenium.aspiration.tests.AspirationTest</span>
-              <div class="ignored-methods-div">
-                <span class="ignored-method-name">testViewProducts</span>
-                <br/>
-                <span class="ignored-method-name">testSignIn</span>
-                <br/>
-                <span class="ignored-method-name">testProductPrices</span>
-                <br/>
-                <span class="ignored-method-name">testIsOptionsChecked</span>
-                <br/>
-              </div> <!-- ignored-methods-div -->
-            </div> <!-- ignored-class-div -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
         <div panel-name="chronological-Aspiration_Test_Suite" class="panel">
@@ -241,11 +292,59 @@ return data;
               </div> <!-- configuration-method before -->
               <div class="test-method">
                 <span class="method-name">testGettingStarted</span>
-                <span class="method-start">5856 ms</span>
+                <span class="method-start">8114 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">afterMethod</span>
-                <span class="method-start">6229 ms</span>
+                <span class="method-start">8807 ms</span>
+              </div> <!-- configuration-method after -->
+              <div class="configuration-method before">
+                <span class="method-name">initialize</span>
+                <span class="method-start">9315 ms</span>
+              </div> <!-- configuration-method before -->
+              <div class="test-method">
+                <span class="method-name">testIsOptionsChecked</span>
+                <span class="method-start">14685 ms</span>
+              </div> <!-- test-method -->
+              <div class="configuration-method after">
+                <span class="method-name">afterMethod</span>
+                <span class="method-start">32313 ms</span>
+              </div> <!-- configuration-method after -->
+              <div class="configuration-method before">
+                <span class="method-name">initialize</span>
+                <span class="method-start">32584 ms</span>
+              </div> <!-- configuration-method before -->
+              <div class="test-method">
+                <span class="method-name">testProductPrices</span>
+                <span class="method-start">37267 ms</span>
+              </div> <!-- test-method -->
+              <div class="configuration-method after">
+                <span class="method-name">afterMethod</span>
+                <span class="method-start">39011 ms</span>
+              </div> <!-- configuration-method after -->
+              <div class="configuration-method before">
+                <span class="method-name">initialize</span>
+                <span class="method-start">39273 ms</span>
+              </div> <!-- configuration-method before -->
+              <div class="test-method">
+                <span class="method-name">testSignIn</span>
+                <span class="method-start">43943 ms</span>
+              </div> <!-- test-method -->
+              <div class="configuration-method after">
+                <span class="method-name">afterMethod</span>
+                <span class="method-start">46238 ms</span>
+              </div> <!-- configuration-method after -->
+              <div class="configuration-method before">
+                <span class="method-name">initialize</span>
+                <span class="method-start">46551 ms</span>
+              </div> <!-- configuration-method before -->
+              <div class="test-method">
+                <span class="method-name">testViewProducts</span>
+                <span class="method-start">51119 ms</span>
+              </div> <!-- test-method -->
+              <div class="configuration-method after">
+                <span class="method-name">afterMethod</span>
+                <span class="method-start">53464 ms</span>
               </div> <!-- configuration-method after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
