--- a/AspirationTest/test-output/old/Aspiration Test-Suite/methods.html
+++ b/AspirationTest/test-output/old/Aspiration Test-Suite/methods.html
@@ -1,10 +1,34 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Aspiration Test-Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="b5dd6c">  <td>23/08/11 16:17:45</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.afterMethod()[pri:0, instance:com.selenium.aspiration.tests.AspirationTest@5c7bfdc1]">&lt;&lt;afterMethod</td> 
-<td>&nbsp;</td>  <td>main@208043846</td>   <td></td> </tr>
-<tr bgcolor="7edbb4">  <td>23/08/11 16:17:45</td>   <td>-373</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AspirationTest.testGettingStarted()[pri:0, instance:com.selenium.aspiration.tests.AspirationTest@5c7bfdc1]">testGettingStarted</td> 
-  <td>main@208043846</td>   <td></td> </tr>
-<tr bgcolor="b5dd6c">  <td>23/08/11 16:17:39</td>   <td>-6225</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.initialize()[pri:0, instance:com.selenium.aspiration.tests.AspirationTest@5c7bfdc1]">&gt;&gt;initialize</td> 
-<td>&nbsp;</td>  <td>main@208043846</td>   <td></td> </tr>
+<tr bgcolor="b5dd6c">  <td>23/08/11 16:33:30</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.afterMethod()[pri:0, instance:com.selenium.aspiration.tests.AspirationTest@5c86a017]">&lt;&lt;afterMethod</td> 
+<td>&nbsp;</td>  <td>main@1693226694</td>   <td></td> </tr>
+<tr bgcolor="b5dd6c">  <td>23/08/11 16:33:23</td>   <td>-6914</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.initialize()[pri:0, instance:com.selenium.aspiration.tests.AspirationTest@5c86a017]">&gt;&gt;initialize</td> 
+<td>&nbsp;</td>  <td>main@1693226694</td>   <td></td> </tr>
+<tr bgcolor="b5dd6c">  <td>23/08/11 16:33:30</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.afterMethod()[pri:0, instance:com.selenium.aspiration.tests.AspirationTest@5c86a017]">&lt;&lt;afterMethod</td> 
+<td>&nbsp;</td>  <td>main@1693226694</td>   <td></td> </tr>
+<tr bgcolor="7edbb4">  <td>23/08/11 16:33:14</td>   <td>-16198</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AspirationTest.testProductPrices()[pri:0, instance:com.selenium.aspiration.tests.AspirationTest@5c86a017]">testProductPrices</td> 
+  <td>main@1693226694</td>   <td></td> </tr>
+<tr bgcolor="b5dd6c">  <td>23/08/11 16:33:30</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.afterMethod()[pri:0, instance:com.selenium.aspiration.tests.AspirationTest@5c86a017]">&lt;&lt;afterMethod</td> 
+<td>&nbsp;</td>  <td>main@1693226694</td>   <td></td> </tr>
+<tr bgcolor="b5dd6c">  <td>23/08/11 16:33:23</td>   <td>-6914</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.initialize()[pri:0, instance:com.selenium.aspiration.tests.AspirationTest@5c86a017]">&gt;&gt;initialize</td> 
+<td>&nbsp;</td>  <td>main@1693226694</td>   <td></td> </tr>
+<tr bgcolor="7edbb4">  <td>23/08/11 16:32:52</td>   <td>-38780</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AspirationTest.testIsOptionsChecked()[pri:0, instance:com.selenium.aspiration.tests.AspirationTest@5c86a017]">testIsOptionsChecked</td> 
+  <td>main@1693226694</td>   <td></td> </tr>
+<tr bgcolor="7edbb4">  <td>23/08/11 16:33:21</td>   <td>-9522</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AspirationTest.testSignIn()[pri:0, instance:com.selenium.aspiration.tests.AspirationTest@5c86a017]">testSignIn</td> 
+  <td>main@1693226694</td>   <td></td> </tr>
+<tr bgcolor="b5dd6c">  <td>23/08/11 16:33:23</td>   <td>-6914</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.initialize()[pri:0, instance:com.selenium.aspiration.tests.AspirationTest@5c86a017]">&gt;&gt;initialize</td> 
+<td>&nbsp;</td>  <td>main@1693226694</td>   <td></td> </tr>
+<tr bgcolor="7edbb4">  <td>23/08/11 16:33:28</td>   <td>-2346</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AspirationTest.testViewProducts()[pri:0, instance:com.selenium.aspiration.tests.AspirationTest@5c86a017]">testViewProducts</td> 
+  <td>main@1693226694</td>   <td></td> </tr>
+<tr bgcolor="7edbb4">  <td>23/08/11 16:32:45</td>   <td>-45351</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AspirationTest.testGettingStarted()[pri:0, instance:com.selenium.aspiration.tests.AspirationTest@5c86a017]">testGettingStarted</td> 
+  <td>main@1693226694</td>   <td></td> </tr>
+<tr bgcolor="b5dd6c">  <td>23/08/11 16:33:30</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.afterMethod()[pri:0, instance:com.selenium.aspiration.tests.AspirationTest@5c86a017]">&lt;&lt;afterMethod</td> 
+<td>&nbsp;</td>  <td>main@1693226694</td>   <td></td> </tr>
+<tr bgcolor="b5dd6c">  <td>23/08/11 16:33:23</td>   <td>-6914</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.initialize()[pri:0, instance:com.selenium.aspiration.tests.AspirationTest@5c86a017]">&gt;&gt;initialize</td> 
+<td>&nbsp;</td>  <td>main@1693226694</td>   <td></td> </tr>
+<tr bgcolor="b5dd6c">  <td>23/08/11 16:33:30</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.afterMethod()[pri:0, instance:com.selenium.aspiration.tests.AspirationTest@5c86a017]">&lt;&lt;afterMethod</td> 
+<td>&nbsp;</td>  <td>main@1693226694</td>   <td></td> </tr>
+<tr bgcolor="b5dd6c">  <td>23/08/11 16:33:23</td>   <td>-6914</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.initialize()[pri:0, instance:com.selenium.aspiration.tests.AspirationTest@5c86a017]">&gt;&gt;initialize</td> 
+<td>&nbsp;</td>  <td>main@1693226694</td>   <td></td> </tr>
 </table>
